# Flasher

./: .gitignore  .shellcheckrc  LICENSE.txt  Pipfile  README.md  build.sh  config.py  controller.py  flash_model.py  hello.py  hello.spec  main.py  main.spec  main_view.py  mainwindow.ui  model.py  partitions.csv  pyproject.toml  qt_resource.qrc  server_model.py  setup.py  start.sh  view.py  wifi_model.py  worker.py
.gitlab/issue_templates/: Feature Request.md  Release.md
doc/: development.md  esp8266-partition.json  known_issues.md  partitions.csv
publish/: build.py  build.sh  compile_translations.sh  main.iss  one-dir.spec  one-file.spec  release_text.sh  update_translations.sh  version_updaters.py
publish/windows/: file_version_info.txt  version.h  version.rc
screenshots/: linux.md  windows.md
snap/: snapcraft.yaml
snap/gui/: inamata-flasher.desktop
spiffs/: root_cas.pem
src/: about_view.py  config.py  controller.py  flash_model.py  locale_model.py  main.py  main_view.py  mkfsimg.py  serial_monitor_controller.py  serial_monitor_view.py  server_model.py  wifi_model.py  worker.py
translations/: main_de_DE.qm  main_de_DE.ts  main_es_ES.qm  main_es_ES.ts  main_fr_FR.qm  main_fr_FR.ts  mainwindow_de_DE.qm  mainwindow_de_DE.ts  mainwindow_es_ES.qm  mainwindow_es_ES.ts  mainwindow_fr_FR.qm  mainwindow_fr_FR.ts
uis/: about.ui  mainwindow.ui  serial_monitor.ui
windows_version/: version.h
