[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = [
  "Moritz Ulmer <moritz@silentwind.eu>",
]
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "License :: OSI Approved :: Apache Software License",
]
description = "A microcontroller flasher for the Inamata IoT platform"
include = ["fonts/*", "images/*", "uis/*", "translations/*", "littlefs_partition/*"]
license = "Apache-2.0"
name = "inamata_flasher"
packages = [{include = "esp_idf/..", from = "src"}]
readme = "README.md"
version = "1.4.1"

[tool.poetry.dependencies]
# Qt bindings
PySide6 = "~=6.7.2"
# Platform specific directories
platformdirs = "~=4.2.2"
# Flash ESP-based chips with firmware and secrets
esptool = "~=4.7.0"
# Save/load auth token
keyring = "~=25.2.1"
# Create filesystem image with secrets
littlefs-python = "~=0.12.0"
# Parse auth token
pyjwt = {version = "~=2.8.0", extras = ["crypto"]}
# Read controller serial communication
pyserial = "~=3.5"
# Python interpretter
python = "~=3.10.0"
# Download firmware/bootloader images
requests = "~=2.32.3"
# Work with semantic versions
semantic-version = "~=2.10.0"

[tool.poetry.group.dev.dependencies]
# Code formatter
black = "~=24.4"
# VS Code debug client
debugpy = "~=1.6"
# Inline debugger
ipdb = "0.13.13"
# Check for upgrades of pip dependencies
pip-check = "~=2.8"
# Create distributable binary
pyinstaller = "~=6.2"
# Used for linting tests
ruff = "~=0.5.4"
# Automate build process
pybuilder = "~=0.13.10"

[tool.poetry.scripts]
inamata-flasher = "main:main"

[tool.ruff]
src = ["src"]
# Flake8 F, pycodestyle E and W, mccabe complexity C90, isort I
select = ["F", "E", "W", "C90", "I"]
# E501: line too long
ignore = ["E501"]
# Package files, system libs
extend-exclude = [
  ".cache/pypoetry/virtualenvs/",
  "/usr/lib/",
]

# Assume Python 3.10.
target-version = "py310"

[tool.ruff.mccabe]
max-complexity = 13
